tests/baselines/reference/forInStatement2.errors.txt
tests/cases/compiler/forInStatement2.ts(2,15): error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'number'.


==== tests/cases/compiler/forInStatement2.ts (1 errors) ====
    var expr: number;
    for (var a in expr) {
                  ~~~~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'number'.
    }